--- a/css/main.css
+++ b/css/main.css
@@ -133,26 +133,30 @@ textarea {
     margin: 80px;
   }
 
-  .code {
+  .code,
+  .code-white {
     border: 1px solid black;
     margin-bottom: 20px;
     padding: 15px;
   }
-
-  .code p {
+  .code p,
+  .code-white p {
     margin: 0;
     text-align: left;
   }
 
-  .code .indent-20 {
+  .code .indent-20,
+  .code-white .indent-20 {
     padding-left: 20px;
   }
 
-  .code .indent-40 {
+  .code .indent-40,
+  .code-white .indent-40 {
     padding-left: 40px;
   }
 
-  .code .indent-80 {
+  .code .indent-80,
+  .code-white .indent-80 {
     padding-left: 80px;
   }
 
@@ -319,19 +323,28 @@ textarea {
   }
 
   #cat-img {
-    background-image: url('../img/anton-lochov-unsplash.jpg')
+    background-image: url('../img/anton-lochov-unsplash.jpg');
   }
 
   #flow {
-    background-image: url('../img/usgs-unsplash.jpg')
+    background-image: url('../img/usgs-unsplash.jpg');
   }
 
   #write {
-    background-image: url('../img/hannah-grace-unsplash.jpg')
+    background-image: url('../img/hannah-grace-unsplash.jpg');
   }
 
   #home-objects {
-    background-image: url('../img/minh-pham-unsplash.jpg')
+    background-image: url('../img/minh-pham-unsplash.jpg');
+  }
+
+  #functions {
+    background-image: url('../img/kari-shea-unsplash.jpg');
+  }
+
+  #pseudo {
+    background-image: url('../img/usgs2-unsplash.jpg');
+    width: 100%;
   }
 
   /* .border-bottom {
